XSCOLIBRI-239: Vertical align not working on cells with multiple lines and entire tables Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@32229 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -24,7 +24,7 @@ html, body, div, span, applet, object, iframe,
   margin: 0;
   outline: 0;
   padding: 0;
-  vertical-align: baseline;
+  vertical-align: inherit;
   line-height: normal;
 }
 
@@ -38,6 +38,7 @@ body {
   font-family: sans-serif;
   font-size: 87.5%; /* 10px */
   min-width: 970px;
+  vertical-align: baseline;
 }
 
 a:link, a:active, a:visited {
@@ -142,12 +143,12 @@ input[type="text"], input[type="password"], textarea, select {
 /* -----------------------Tables-------------------------*/
 table {
   border-collapse: collapse;
+  vertical-align: middle;
 }
 
 caption, th, td {
   font-size: 1em;
   text-align: left;
-  vertical-align: middle;
 }
 
 th {
